Add support for adding remarks to contacts